[tool.poetry]
name = "epicgamerx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
coloredlogs = "^15.0.1"
discord = "1.7.3"
pytz = "^2021.1"
replit = "^3.1.0"
PyNaCl = "^1.4.0"
Flask = "^2.1.1"
bs4 = "^0.0.1"
"discord.py" = "1.7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
